--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,11 +8,13 @@
   </head>
   <body>
     <div id="content">
-      <h1>My Portfolio</h1>
+      <img src="/images/HeadShot.JPG">
+      <h1>Paul's Portfolio</h1>
       <p>This is my portfolio.</p>
-      <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
-      <div id="greeting-container"></div>
+      <p>I am a computer science major at Morehouse college in Atlanta and a 2020 STEP intern </p>
+      <p>Click to get a random fact about myself:</p>
+      <button onclick="addRandomFact()">Fact</button>
+      <div id="fact-container"></div>
     </div>
   </body>
 </html>
