reformat random fact generator to fetch facts from the server

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -18,7 +18,7 @@
             <p>I am a computer science major at Morehouse college in Atlanta and a 2020 STEP intern </p>
             <p>Click to get a random fact about myself:</p>
             <button onclick="addRandomFact()">Fact</button>
-            <div id="fact-container"></div>
+            <div class="fact-container"></div>
         </div>
       </header> 
       <!-- ********************  PROJECTS ********************* -->
