--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -115,6 +115,12 @@
         </ul>
         </section>
       </section>
+
+      <section>
+          <h2>Comments</h2>
+          <ul class="comment-list">
+          </ul>
+      </section>
       <!-- *****************  CONTACT INFO / SOCIAL MEDIA  ***************** -->
       <footer>
         
