Add non-persitant comment section add comment feature, remove hard coded comments

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -120,6 +120,10 @@
           <h2>Comments</h2>
           <ul class="comment-list">
           </ul>
+          <form action="/comments" method="POST"> 
+            <input type="text" name="text-input">
+            <input type="submit">
+          </form>
       </section>
       <!-- *****************  CONTACT INFO / SOCIAL MEDIA  ***************** -->
       <footer>
