--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -7,7 +7,7 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <div id="content">
+    <div class="content" onload="showComments()">
       <!-- ***********************  ABOUT *********************** -->  
       <header>
         <img src="/images/HeadShot.JPG">
@@ -118,12 +118,21 @@
 
       <section>
           <h2>Comments</h2>
+
+          <form onsubmit="showComments();return false;">
+            <label for="MaxComments">Number of Comments to show:</label>
+            <input type="number" name="maxComments" min="1" value="1">
+            <input type="submit">
+          </form>
+          
+
           <ul class="comment-list">
           </ul>
-          <form action="/comments" method="POST"> 
+          <form action="/comments" method="POST">
             <input type="text" name="text-input">
             <input type="submit">
           </form>
+
       </section>
       <!-- *****************  CONTACT INFO / SOCIAL MEDIA  ***************** -->
       <footer>
