Add comment delete fuctionality and interface

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -133,6 +133,8 @@
             <input type="submit">
           </form>
 
+          <button onclick="deleteCommentData()">DELETE ALL COMMENTS</button>
+
       </section>
       <!-- *****************  CONTACT INFO / SOCIAL MEDIA  ***************** -->
       <footer>
