Add inital chart

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>Paul Lockett|Software Developer</title>
+
     <link rel="stylesheet" href="style.css">
+
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="script.js"></script>
   </head>
   <body onload="showComments()">
@@ -18,6 +21,7 @@
         <p>Click to get a random fact about myself:</p>
         <button onclick="addRandomFact()">Fact</button>
         <div class="fact-container"></div>
+        <div class="chart-container"></div>
       </div>
     </header> 
     <!-- ********************  PROJECTS ********************* -->
